# PortfolioRust

./: .gitignore  Cargo.toml  diesel.toml  todo.db
migrations/2025-07-04-062345_create_task/: up.sql
src/: main.rs  schema.rs  types.rs
src/routes/: delete.rs  get.rs  post.rs  put.rs
