[package]
name = "rust_todo_api"
version ="0.1.0"
edition ="2021"
authors = ["Le Victor"]
description = "API REST To-Do List en Rust avec Actix-web"
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"]}
diesel = { version = "2", features = ["sqlite", "r2d2"]}
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"